# scrapy-gsheet-example

./: .gitignore  Dockerfile  Makefile  Pipfile  ReadMe.md  dev.sh  docker-compose.yml  pyproject.toml  scrapy.cfg  server_cred.json
env/: local.env.example
scraper/: gsheet_exporter.py  items.py  pipelines.py  settings.py
scraper/spiders/: spider.py
