[tool.poetry]
name = "gsheet_example"
version = "1.0.0"
description = "Contains gsheet example with exporter"
authors = ["vitalyven"]

[tool.poetry.dependencies]
python = "^3.10"
Scrapy = "^2.6.2"
scrapyd = "^1.3.0"
requests = "^2.27.1"
logparser = "^0.8.2"
scrapyd-client = "^1.2.2"
google = "^3.0.0"
google-api-python-client = "^2.61.0"
google-auth-oauthlib = "^0.5.2"
pyOpenSSL = "^22.0.0"
cryptography = "^38.0.1"

[tool.poetry.dev-dependencies]
# tests
pytest = "^7.0.1"
pytest-cov = "^3.0.0"
pytest-xdist = { extras = ["psutil"], version = "^2.5.0" }

# formatters
autoflake = "^1.5.3"
black = "^22.1.0"
isort = "^5.10.1"
docformatter = "^1.4"
# linters
pylint = "^2.12.2"
mypy = "^0.931"

[tool.mypy]
follow_imports = "silent"
show_column_numbers = true
ignore_missing_imports = true

[tool.pylint.main]
fail-under = 8

[tool.pylint.messages_control]
disable = [
    "missing-function-docstring",
    "missing-module-docstring",
    "missing-class-docstring",
    "too-few-public-methods",
    "logging-fstring-interpolation",
]

[tool.pylint.format]
max-line-length = 120

[tool.black]
line-length = 120

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
