[project]
name = "gsheet_example"
version = "1.0.0"
description = "Contains gsheet example with exporter"
authors = [{name = "vitalyven"}]
requires-python = ">=3.14"

dependencies = [
    "scrapy>=2.12.0",
    "scrapyd>=1.4.3",
    "requests>=2.32.3",
    "logparser>=0.8.4",
    "scrapyd-client>=2.0.3",
    "google>=3.0.0",
    "google-api-python-client>=2.164.0",
    "google-auth-oauthlib>=1.2.1",
    "pyopenssl>=25.0.0",
    "cryptography>=44.0.2",
]

[dependency-groups]
dev = [
    # tests
    "pytest>=8.3.5",
    "pytest-cov>=6.0.0",
    "pytest-xdist[psutil]>=3.6.1",
    # formatters & linters
    "ruff>=0.11.0",
    "mypy>=1.15.0",
]

[tool.mypy]
follow_imports = "silent"
show_column_numbers = true
ignore_missing_imports = true

[tool.ruff]
line-length = 120
exclude = ["examples"]

[tool.ruff.lint]
select = ["E", "F", "I"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["scraper"]
